IMPALA-2375: Legacy agg does not handle parent Prepare failure

When the legacy agg node's parent fails to Prepare, the
agg Close needs to check before touching memory that would
be allocated by its Prepare but didn't get allocated
because Prepare returned early when the parent Prepare
failed.

test_failpoints tests this case

Change-Id: I660e9653958bcfe1f44c20275abe35235de94329
Reviewed-on: http://gerrit.cloudera.org:8080/888
Reviewed-by: Matthew Jacobs <mj@cloudera.com>
Tested-by: Internal Jenkins